# ewubd-timetable

./: Cargo.toml  Dockerfile  bacon.toml
src/cli/: mod.rs
src/lib/: auth.rs  calendar.rs  courses.rs  mod.rs  periods.rs  semester.rs  utils.rs
src/server/: mod.rs  partials.rs
src/server/routes/: dashboard.rs  index.rs  logout.rs  mod.rs
